--- a/index.html
+++ b/index.html
@@ -4,61 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крутая работа</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="pages/news.html">Новости</a></li>
-            <li><a href="pages/practices.html">Практики</a></li>
-            <li><a href="pages/goods.html">Товары</a></li>
-            <li><a href="pages/contacts.html">Контакты</a></li>
-        </ul>
-    </div>
-    <div id="content">
-        <p>Информация об авторе</p>
-        <img src="images/photo.png" alt="Фото автора" width="200" height="250">
-        <p>Кивалин Никита Сергеевич</p>
-        <p>ЭФБО-02-24</p>
-        <p>Обо мне: Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. 
-            Это — наша семья. Стою с родителями и сестрой Франческой. 
-            Я мало что помню о тех временах, разве что жизнь была тяжёлой, а потом отец решил, 
-            что нам пора уезжать. Пересечь океан и начать новую жизнь. 
-            Никогда в жизни я не видел ничего подобного Эмпайр-Бэй. 
-            Он был прекрасен. Впрочем, трудно представить что-то более скверное и отвратительное,
-             чем наша новая конура. Американская мечта… Скорее уж кошмар. 
-             Отец стал работать в порту у человека, который перевёз нас сюда. 
-             Он работал как проклятый, зарабатывал гроши и почти всё спускал в кабаке. 
-             Со временем меня отдали в школу. Мне нужен был английский, но чёрта с два я бы заговорил на 
-             нём с итальянцами. Там я и встретил Джо. Постепенно мы стали лучшими друзьями. 
-             Так как у обоих свистело в кармане, а пристойной работы не было, мы 
-             затеяли своё скромное дело. Что ж, тогда нам не повезло. 
-             На дворе стоял 43-й год. Шла война. Высадка на Сицилии, нужны были солдаты, 
-             говорящие на итальянском. Мне было 18, и в тюрьму я не хотел. 
-             Кто сказал, что нельзя вернуться на Родину?..
-        </p>
-        <div>Навык 1: общительный</div>
-        <div>Навык 2: крутой</div>
-        <div>Навык 3: очень крутой</div>
-        <div>Навык 4: я не ботан</div>
-    </div>
-    <div>
-        Мой опыт работы:
-        <div>
-            Опыт 1.<br>
-            Работал ювелиром.
+    <div class="page-container">
+        <div class="header">Хэдер</div>
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
+            </ul>
         </div>
-        <div>
-            Опыт 2.<br>
-            Работал в цирке.
+        <div class="content">
+            <div class="profile-header">
+                <h1 class="profile-title">Информация об авторе</h1>
+                <img class="profile-photo" src="images/photo.png" alt="Фото автора" width="200" height="250">
+                <h2 class="profile-name">Кивалин Никита Сергеевич</h2>
+                <p class="profile-group">ЭФБО-02-24</p>
+            </div>
+            <div class="about-me">
+                <p>Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. 
+                    Это — наша семья. Стою с родителями и сестрой Франческой. 
+                    Я мало что помню о тех временах, разве что жизнь была тяжёлой, а потом отец решил, 
+                    что нам пора уезжать. Пересечь океан и начать новую жизнь. 
+                    Никогда в жизни я не видел ничего подобного Эмпайр-Бэй. 
+                    Он был прекрасен. Впрочем, трудно представить что-то более скверное и отвратительное,
+                    чем наша новая конура. Американская мечта… Скорее уж кошмар. 
+                    Отец стал работать в порту у человека, который перевёз нас сюда. 
+                    Он работал как проклятый, зарабатывал гроши и почти всё спускал в кабаке. 
+                    Со временем меня отдали в школу. Мне нужен был английский, но чёрта с два я бы заговорил на 
+                    нём с итальянцами. Там я и встретил Джо. Постепенно мы стали лучшими друзьями. 
+                    Так как у обоих свистело в кармане, а пристойной работы не было, мы 
+                    затеяли своё скромное дело. Что ж, тогда нам не повезло. 
+                    На дворе стоял 43-й год. Шла война. Высадка на Сицилии, нужны были солдаты, 
+                    говорящие на итальянском. Мне было 18, и в тюрьму я не хотел. 
+                    Кто сказал, что нельзя вернуться на Родину?..
+                </p>
+            </div>
+            <div class="skills-container"> 
+                <div class="skill-tag">Навык 1: общительный</div>
+                <div class="skill-tag">Навык 2: крутой</div>
+                <div class="skill-tag">Навык 3: очень крутой</div>
+                <div class="skill-tag">Навык 4: я не ботан</div>
+            </div>
+             <div class="experience-section">
+                <h2 class="section-title">Мой опыт работы:</h2>
+                <div class="experience-card"> 
+                    <h3 class="experience-title">Опыт 1.</h3>
+                    <p class="experience-desc">Работал ювелиром.</p>
+                </div>
+                <div class="experience-card"> 
+                    <h3 class="experience-title">Опыт 2.</h3>
+                    <p class="experience-desc">Работал в цирке.</p>
+                </div>
+                <div class="experience-card">
+                    <h3 class="experience-title">Опыт 3.</h3>
+                    <p class="experience-desc">Работал с беброчкой.</p>
+                </div>
+            </div>
         </div>
-        <div>
-            Опыт 3.<br>
-            Работал с беброчкой.
-        </div>
-    </div>
-    <div id="footer">Футер</div>
+       <div class="footer">Футер</div>
     </div>
 </body>
 </html>
