--- a/pages/goods.html
+++ b/pages/goods.html
@@ -4,35 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крутая работа</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-    <div id="header">Хэдер</div>
-    <div id="menu">
-        <ul>
-            <li><a href="../index.html">Главная</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li>
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
+    <div class="page-container">
+        <div class="header">Хэдер</div>
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="good">
+                <img src="../images/kirieshki.png" alt="фото товара" width="200" height="200">
+                <h2>кириешки</h2>
+                <h3>цена: 69 тенге</h3>
+            </div>
+            <div class="good">
+                <img src="../images/hrusteam.png" alt="фото товара" width="200" height="200">
+                <h2>хрустим</h2>
+                <h3>цена: 52 тенге</h3>
+            </div>
+            <div class="good">
+                 <img src="../images/korochki.png" alt="фото товара" width="200" height="200">
+                <h2>три корочки</h2>
+                <h3>цена: 274 тенге</h3>
+            </div>
+        </div>
+    <div class="footer">Футер</div>
     </div>
-    <div id="content">
-        <div class="good">
-            <img src="../images/kirieshki.png" alt="фото товара" width="200" height="200">
-            <div class="title">кириешки</div>
-            <div class="cost">цена: 69 тенге</div>
-        </div>
-        <div class="good">
-            <img src="../images/hrusteam.png" alt="фото товара" width="200" height="200">
-            <div class="title">хрустим</div>
-            <div class="cost">цена: 52 тенге</div>
-        </div>
-        <div class="good">
-            <img src="../images/korochki.png" alt="фото товара" width="200" height="200">
-            <div class="title">три корочки</div>
-            <div class="cost">цена: 274 тенге</div>
-        </div>
-    </div>
-    <div id="footer">Футер</div>
 </body>
 </html>
