--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
                 </p>
             </div>
             <div class="skills-container"> 
-                <div class="skill-tag">Навык 1: общительный</div>
-                <div class="skill-tag">Навык 2: крутой</div>
-                <div class="skill-tag">Навык 3: очень крутой</div>
-                <div class="skill-tag">Навык 4: я не ботан</div>
+                <div class="skill-tag">Общительный</div>
+                <div class="skill-tag">Крутой</div>
+                <div class="skill-tag">Очень крутой</div>
+                <div class="skill-tag">Ч не ботан</div>
             </div>
              <div class="experience-section">
                 <h2 class="section-title">Мой опыт работы:</h2>
                 <div class="experience-card"> 
-                    <h3 class="experience-title">Опыт 1.</h3>
+                    <h3 class="experience-title">Опыт 1. Ювелирный завод "Султаночка"</h3>
                     <p class="experience-desc">Работал ювелиром.</p>
                 </div>
                 <div class="experience-card"> 
-                    <h3 class="experience-title">Опыт 2.</h3>
+                    <h3 class="experience-title">Опыт 2. Цирк "ЦАО-ЦАО"</h3>
                     <p class="experience-desc">Работал в цирке.</p>
                 </div>
                 <div class="experience-card">
-                    <h3 class="experience-title">Опыт 3.</h3>
+                    <h3 class="experience-title">Опыт 3. Кафе "Бебрини"</h3>
                     <p class="experience-desc">Работал с беброчкой.</p>
                 </div>
             </div>
