added grid done task 9

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="header">Хэдер</div>
-        <div class="nav">
+        <header class="header">
+            <h1>Хэдер</h1>
+        </header>
+        <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
                 <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
@@ -17,9 +19,9 @@
                 <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
                 <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
             </ul>
-        </div>
-        <div class="content">
-            <div class="contacts-container">
+        </nav>
+        <main class="content">
+            <section class="contacts-container">
                 <h2 class = "section-title">Контакты</h2>
                 <div class="contact-info">
                     <p>Адрес электронной почты: aaaaa@bbb.ccc</p>
@@ -28,9 +30,11 @@
                     <p>Физический адресс: г.Новоселки, ул. Рака, д.25142</p>
                 </div>
                 <button class="contact-button">Позвоните мне</button>
-            </div>
-        </div>
-        <div class="footer">Футер</div>
+            </section>
+        </main>
+        <footer class="footer">
+            <h2>Футер</h2>
+        </footer>
     </div>
 </body>
 </html>
