--- a/pages/goods.html
+++ b/pages/goods.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="header">Хэдер</div>
-        <div class="nav">
+        <header class="header">
+            <h1>Хэдер</h1>
+        </header>
+        <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
                 <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
@@ -17,25 +19,28 @@
                 <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
                 <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
             </ul>
-        </div>
-        <div class="content">
-            <div class="good">
-                <img src="../images/kirieshki.png" alt="фото товара" width="200" height="200">
-                <h2>кириешки</h2>
-                <h3>цена: 69 тенге</h3>
+        </nav>
+        <main class="content">
+            <div class="goods-grid">
+                <article class="good">
+                    <img src="../images/kirieshki.png" alt="фото товара" width="200" height="200">
+                    <h2>кириешки</h2>
+                    <h3>цена: 69 тенге</h3>
+                </article>
+                <article class="good">
+                    <img src="../images/hrusteam.png" alt="фото товара" width="200" height="200">
+                    <h2>хрустим</h2>
+                    <h3>цена: 52 тенге</h3>
+                </article>
+                <article class="good">
+                    <img src="../images/korochki.png" alt="фото товара" width="200" height="200">
+                    <h2>три корочки</h2>
+                    <h3>цена: 274 тенге</h3>
+                </article>
             </div>
-            <div class="good">
-                <img src="../images/hrusteam.png" alt="фото товара" width="200" height="200">
-                <h2>хрустим</h2>
-                <h3>цена: 52 тенге</h3>
-            </div>
-            <div class="good">
-                 <img src="../images/korochki.png" alt="фото товара" width="200" height="200">
-                <h2>три корочки</h2>
-                <h3>цена: 274 тенге</h3>
-            </div>
-        </div>
-    <div class="footer">Футер</div>
-    </div>
+        </main>
+    <footer class="footer">
+        <h2>Футер</h2>
+    </footer>
 </body>
 </html>
