--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="header">Хэдер</div>
-        <div class="nav">
+        <header class="header">
+            <h1>Хэдер</h1>
+        </header>
+        <nav class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
                 <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
@@ -17,15 +19,16 @@
                 <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
                 <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
             </ul>
-        </div>
-        <div class="content">
-            <div class="profile-header">
+        </nav>
+        <main class="content">
+            <article class="profile-header">
                 <h1 class="profile-title">Информация об авторе</h1>
                 <img class="profile-photo" src="images/photo.png" alt="Фото автора" width="200" height="250">
                 <h2 class="profile-name">Кивалин Никита Сергеевич</h2>
                 <p class="profile-group">ЭФБО-02-24</p>
-            </div>
-            <div class="about-me">
+            </article>
+            <h2 class="section-title">Обо мне</h2>
+            <section class="about-me">
                 <p>Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. 
                     Это — наша семья. Стою с родителями и сестрой Франческой. 
                     Я мало что помню о тех временах, разве что жизнь была тяжёлой, а потом отец решил, 
@@ -43,30 +46,37 @@
                     говорящие на итальянском. Мне было 18, и в тюрьму я не хотел. 
                     Кто сказал, что нельзя вернуться на Родину?..
                 </p>
-            </div>
-            <div class="skills-container"> 
-                <div class="skill-tag">Общительный</div>
-                <div class="skill-tag">Крутой</div>
-                <div class="skill-tag">Очень крутой</div>
-                <div class="skill-tag">Ч не ботан</div>
-            </div>
-             <div class="experience-section">
+            </section>
+            <section class="skills-container"> 
+                <h2 class="section-title">Мои навыки:</h2>
+                    <div class="skills-grid">
+                        <div class="skill-tag">Общительный</div>
+                        <div class="skill-tag">Крутой</div>
+                        <div class="skill-tag">Очень крутой</div>
+                        <div class="skill-tag">Я не ботан</div>
+                    </div>
+            </section>
+             <section class="experience-section">
                 <h2 class="section-title">Мой опыт работы:</h2>
-                <div class="experience-card"> 
-                    <h3 class="experience-title">Опыт 1. Ювелирный завод "Султаночка"</h3>
-                    <p class="experience-desc">Работал ювелиром.</p>
+                <div class="experience-grid"> 
+                    <article class="experience-card"> 
+                        <h3 class="experience-title">Ювелирный завод "Султаночка"</h3>
+                        <p class="experience-desc">Работал ювелиром.</p>
+                    </article>
+                    <article class="experience-card"> 
+                        <h3 class="experience-title">Цирк "ЦАО-ЦАО"</h3>
+                        <p class="experience-desc">Работал в цирке.</p>
+                    </article>
+                    <article class="experience-card">
+                        <h3 class="experience-title">Кафе "Бебрини"</h3>
+                        <p class="experience-desc">Работал с беброчкой.</p>
+                    </article>
                 </div>
-                <div class="experience-card"> 
-                    <h3 class="experience-title">Опыт 2. Цирк "ЦАО-ЦАО"</h3>
-                    <p class="experience-desc">Работал в цирке.</p>
-                </div>
-                <div class="experience-card">
-                    <h3 class="experience-title">Опыт 3. Кафе "Бебрини"</h3>
-                    <p class="experience-desc">Работал с беброчкой.</p>
-                </div>
-            </div>
-        </div>
-       <div class="footer">Футер</div>
+            </section>
+        </main>
+        <footer class="footer">
+            <h2>Футер</h2>
+        </footer>
     </div>
 </body>
 </html>
