--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крутая работа</title>
     <link rel="stylesheet" href="../style/styles.css">
+    <script src="../js/form-button.js"></script>
 </head>
 <body>
     <div class="page-container">
@@ -29,12 +30,55 @@
                 <div class="contact-info">
                     <p>Физический адресс: г.Новоселки, ул. Рака, д.25142</p>
                 </div>
-                <button class="contact-button">Позвоните мне</button>
+                <button class="contact-button" onclick="contactModal.showModal()">Позвоните мне</button>
             </section>
         </main>
         <footer class="footer">
             <h2>Футер</h2>
         </footer>
+
+        <dialog id="contactModal">
+            <div class="modal-header">
+                <button class="form-close-button" onclick="contactModal.close()"><b>X</b></button>
+                <h2>Форма обратной связи</h2>
+            </div>
+            <div class="modal-content">
+                <form id="feedbackForm" method="dialog">
+                    <div class="form-group">
+                        <label for="name">Имя<span class="required">*</span></label>
+                        <input type="text" id="name" name="name" required placeholder="Введите ваше имя">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Телефон<span class="required">*</span></label>
+                        <input type="tel" id="phone" name="phone" required placeholder="+7 (XXX) XXX-XX-XX">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email<span class="required">*</span></label>
+                        <input type="email" id="email" name="email" required placeholder="example@mail.ru">
+                    </div>
+                    <div class="form-group">
+                        <label for="category">Категория обращения<span class="required">*</span></label>
+                        <select id="category" name="category" required>
+                            <option value="">Выберите категорию</option>
+                            <option value="technical">Техническая поддержка</option>
+                            <option value="commercial">Коммерческое предложение</option>
+                            <option value="cooperation">Сотрудничество</option>
+                            <option value="complaint">Жалоба</option>
+                            <option value="suggestion">Предложение</option>
+                            <option value="other">Другое</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Текст обращения<span class="required">*</span></label>
+                        <textarea id="message" name="message" required placeholder="Опишите вашу проблему или вопрос..."></textarea>
+                    </div>
+                    <div class="modal-actions">
+                        <button type="reset" id="cancel-button" class="btn btnsecondary">Отмена</button>
+                        <button type="button" id="send-button" class="btn btn-primary" onclick="submitForm()">Отправить</button>
+                    </div>
+                </form>
+            </div>
+        </dialog>
     </div>
 </body>
 </html>
