--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -50,7 +50,8 @@
                     </div>
                     <div class="form-group">
                         <label for="phone">Телефон<span class="required">*</span></label>
-                        <input type="tel" id="phone" name="phone" required placeholder="+7 (XXX) XXX-XX-XX">
+                        <input type="tel" id="phone" name="phone" pattern="^\+7 \(\d{3}\) \d{3}-\d{2}-\d{2}$" 
+                                                            placeholder="+7 (___) ___-__-__">
                     </div>
                     <div class="form-group">
                         <label for="email">Email<span class="required">*</span></label>
