--- a/index.html
+++ b/index.html
@@ -5,77 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крутая работа</title>
     <link rel="stylesheet" href="style/styles.css">
+    <script src="js/theme.js"></script>
 </head>
 <body>
-    <div class="page-container">
+    <div class="page">
         <header class="header">
-            <h1>Хэдер</h1>
+            <h1 class="header__title">Моё портфолио</h1>
         </header>
         <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/news.html">Новости</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/practices.html">Практики</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/goods.html">Товары</a></li>
-                <li class="nav-item"><a class="nav-link" href="pages/contacts.html">Контакты</a></li>
+            <ul class="nav__list">
+                <li class="nav__item nav__item--active">
+                    <a class="nav__link" href="index.html">Главная</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="pages/news.html">Новости</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="pages/contacts.html">Контакты</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="pages/goods.html">Товары</a>
+                </li>
+                <li>
+                    <a class="nav__link nav__link--theme-change" onclick="changeTheme()">T</a>
+                </li>
             </ul>
         </nav>
-        <main class="content">
-            <article class="profile-header">
-                <h1 class="profile-title">Информация об авторе</h1>
-                <img class="profile-photo" src="images/photo.png" alt="Фото автора" width="200" height="250">
-                <h2 class="profile-name">Кивалин Никита Сергеевич</h2>
-                <p class="profile-group">ЭФБО-02-24</p>
-            </article>
-            <h2 class="section-title">Обо мне</h2>
-            <section class="about-me">
-                <p>Меня зовут Вито Скалетта. Я родился на Сицилии, в 25-м году. 
-                    Это — наша семья. Стою с родителями и сестрой Франческой. 
-                    Я мало что помню о тех временах, разве что жизнь была тяжёлой, а потом отец решил, 
-                    что нам пора уезжать. Пересечь океан и начать новую жизнь. 
-                    Никогда в жизни я не видел ничего подобного Эмпайр-Бэй. 
-                    Он был прекрасен. Впрочем, трудно представить что-то более скверное и отвратительное,
-                    чем наша новая конура. Американская мечта… Скорее уж кошмар. 
-                    Отец стал работать в порту у человека, который перевёз нас сюда. 
-                    Он работал как проклятый, зарабатывал гроши и почти всё спускал в кабаке. 
-                    Со временем меня отдали в школу. Мне нужен был английский, но чёрта с два я бы заговорил на 
-                    нём с итальянцами. Там я и встретил Джо. Постепенно мы стали лучшими друзьями. 
-                    Так как у обоих свистело в кармане, а пристойной работы не было, мы 
-                    затеяли своё скромное дело. Что ж, тогда нам не повезло. 
-                    На дворе стоял 43-й год. Шла война. Высадка на Сицилии, нужны были солдаты, 
-                    говорящие на итальянском. Мне было 18, и в тюрьму я не хотел. 
-                    Кто сказал, что нельзя вернуться на Родину?..
-                </p>
+        <main class="main">
+            <section class="profile">
+                <div class="profile__card">
+                    <img class="profile__photo" src="images/photo.png" alt="Фото">
+                    <div class="profile__info">
+                        <h2 class="profile__name">Кивалин Никита</h2>
+                        <p class="profile__group">ЭФБО-02-24</p>
+                    </div>
+                </div>
             </section>
-            <section class="skills-container"> 
-                <h2 class="section-title">Мои навыки:</h2>
-                    <div class="skills-grid">
-                        <div class="skill-tag">Общительный</div>
-                        <div class="skill-tag">Крутой</div>
-                        <div class="skill-tag">Очень крутой</div>
-                        <div class="skill-tag">Я не ботан</div>
+            <section class="about">
+                <h2 class="about__title">Обо мне</h2>
+                    <div class="about__content">
+                        <p class="about__text">
+                        Студент, увлекаюсь веб-разработкой. Изучаю HTML, CSS и
+                        JavaScript.
+                        Люблю создавать красивые и функциональные сайты.
+                        </p>
                     </div>
             </section>
-             <section class="experience-section">
-                <h2 class="section-title">Мой опыт работы:</h2>
-                <div class="experience-grid"> 
-                    <article class="experience-card"> 
-                        <h3 class="experience-title">Ювелирный завод "Султаночка"</h3>
-                        <p class="experience-desc">Работал ювелиром.</p>
-                    </article>
-                    <article class="experience-card"> 
-                        <h3 class="experience-title">Цирк "ЦАО-ЦАО"</h3>
-                        <p class="experience-desc">Работал в цирке.</p>
-                    </article>
-                    <article class="experience-card">
-                        <h3 class="experience-title">Кафе "Бебрини"</h3>
-                        <p class="experience-desc">Работал с беброчкой.</p>
-                    </article>
+            <section class="skills"> 
+                <h2 class="skills__title">Мои навыки</h2>
+                <div class="skills__list">
+                    <div class="skill skill--html">
+                        <span class="skill__name">HTML</span>
+                    </div>
+                    <div class="skill skill--css">
+                        <span class="skill__name">CSS</span>
+                    </div>
+                    <div class="skill skill--js">
+                        <span class="skill__name">JavaScript</span>
+                    </div>
+                </div>
+            </section>
+            <section class="projects">
+                <h2 class="projects__title">Проекты</h2>
+                <div class="projects__grid">
+                    <div class="project-card">
+                        <h3 class="project-card__title">Личный сайт</h3>
+                        <p class="project-card__desc">Сайт-портфолио на HTML и
+                        CSS</p>
+                    </div>
+                    <div class="project-card">
+                        <h3 class="project-card__title">Тodo приложение</h3>
+                        <p class="project-card__desc">Простое приложение для
+                        задач</p>
+                    </div>
                 </div>
             </section>
         </main>
         <footer class="footer">
-            <h2>Футер</h2>
+            <p class="footer__text">&copy; 2025 Крутая работа</p>
         </footer>
     </div>
 </body>
