--- a/pages/goods.html
+++ b/pages/goods.html
@@ -5,42 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крутая работа</title>
     <link rel="stylesheet" href="../style/styles.css">
+    <script src="../js/theme.js"></script>
 </head>
 <body>
-    <div class="page-container">
+    <div class="page">
         <header class="header">
-            <h1>Хэдер</h1>
+            <h1 class="header__title">Новости</h1>
         </header>
         <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
-                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a class="nav__link" href="../index.html">Главная</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="../pages/news.html">Новости</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="../pages/contacts.html">Контакты</a>
+                </li>
+                <li class="nav__item nav__item--active">
+                    <a class="nav__link" href="../pages/goods.html">Товары</a>
+                </li>
+                <li>
+                    <a class="nav__link nav__link--theme-change" onclick="changeTheme()">T</a>
+                </li>
             </ul>
         </nav>
-        <main class="content">
-            <div class="goods-grid">
-                <article class="good">
+        <main class="main">
+            <div class="goods">
+                <article class="goods__item">
                     <img src="../images/kirieshki.png" alt="фото товара" width="200" height="200">
                     <h2>кириешки</h2>
-                    <h3>цена: 69 тенге</h3>
+                    <h3 class="goods__item__price">цена: 69 тенге</h3>
                 </article>
-                <article class="good">
+                <article class="goods__item">
                     <img src="../images/hrusteam.png" alt="фото товара" width="200" height="200">
                     <h2>хрустим</h2>
-                    <h3>цена: 52 тенге</h3>
+                    <h3 class="goods__item__price">цена: 52 тенге</h3>
                 </article>
-                <article class="good">
+                <article class="goods__item">
                     <img src="../images/korochki.png" alt="фото товара" width="200" height="200">
                     <h2>три корочки</h2>
-                    <h3>цена: 274 тенге</h3>
+                    <h3 class="goods__item__price">цена: <span class="goods__item__price--sale--old--price">274 тенге</span> 20 тенге</h3>
                 </article>
             </div>
         </main>
-    <footer class="footer">
-        <h2>Футер</h2>
-    </footer>
+        <footer class="footer">
+            <p class="footer__text">&copy; 2025 Крутая работа</p>
+        </footer>
+    </div>
 </body>
 </html>
