--- a/pages/goods.html
+++ b/pages/goods.html
@@ -4,55 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Крутая работа</title>
-    <link rel="stylesheet" href="../style/styles.css">
-    <script src="../js/theme.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrapicons@1.11.1/font/bootstrap-icons.css">
 </head>
-<body>
-    <div class="page">
-        <header class="header">
-            <h1 class="header__title">Новости</h1>
+<body class="bg-light">
+    <div class="container-fluid p-0">
+        <header class="bg-primary text-white py-4">
+            <h3 class="text-center">Товары</h3>
         </header>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a class="nav__link" href="../index.html">Главная</a>
-                </li>
-                <li class="nav__item">
-                    <a class="nav__link" href="../pages/news.html">Новости</a>
-                </li>
-                <li class="nav__item">
-                    <a class="nav__link" href="../pages/contacts.html">Контакты</a>
-                </li>
-                <li class="nav__item nav__item--active">
-                    <a class="nav__link" href="../pages/goods.html">Товары</a>
-                </li>
-                <li>
-                    <a class="nav__link nav__link--theme-change" onclick="changeTheme()">T</a>
-                </li>
-            </ul>
-        </nav>
-        <main class="main">
-            <div class="goods">
-                <article class="goods__item">
-                    <img src="../images/kirieshki.png" alt="фото товара" width="200" height="200">
-                    <h2>кириешки</h2>
-                    <h3 class="goods__item__price">цена: 69 тенге</h3>
-                </article>
-                <article class="goods__item">
-                    <img src="../images/hrusteam.png" alt="фото товара" width="200" height="200">
-                    <h2>хрустим</h2>
-                    <h3 class="goods__item__price">цена: 52 тенге</h3>
-                </article>
-                <article class="goods__item">
-                    <img src="../images/korochki.png" alt="фото товара" width="200" height="200">
-                    <h2>три корочки</h2>
-                    <h3 class="goods__item__price">цена: <span class="goods__item__price--sale--old--price">274 тенге</span> 20 тенге</h3>
-                </article>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../index.html">
+                                <i class="bi bi-house me-1"></i>Главная
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="news.html">
+                                <i class="bi bi-newspaper me-1"></i>Новости
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="practices.html">
+                                <i class="bi bi-code-slash me-1"></i>Практики
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="goods.html">
+                                <i class="bi bi-cart me-1"></i>Товары
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacts.html">
+                                <i class="bi bi-telephone me-1"></i>Контакты
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+
+        <main class="container my-4">
+            <div class="container border border-dark border-3 rounded py-4 mt-4 text-center" style="max-width: 90%; width: 800px; background-color: #ea868f">
+                <img src="../images/kirieshki.png" alt="фото товара" width="200" height="200" class="d-block mx-auto mb-3 border border-dark border-1">
+                <h1 class="mb-2">кириешки</h2>
+                <h3 class="mb-0">цена: 69 тенге</h3>
+            </div>
+
+            <div class="container border border-dark border-3 rounded py-4 mt-4 text-center" style="max-width: 90%; width: 800px; background-color: #ea868f">
+                <div>
+                    <img src="../images/hrusteam.png" alt="фото товара" width="200" height="200" class="d-block mx-auto mb-3 border border-dark border-1">
+                    <h2>хрустим</h2>
+                    <h3>цена: 52 тенге</h3>
+                </div>
+            </div>
+
+            <div class="container border border-dark border-3 rounded py-4 mt-4 text-center" style="max-width: 90%; width: 800px; background-color: #ea868f">
+                <div>
+                    <img src="../images/korochki.png" alt="фото товара" width="200" height="200" class="d-block mx-auto mb-3 border border-dark border-1">
+                    <h2>три корочки</h2>
+                    <h3>цена: <s>274 тенге</s> 20 тенге</h3>
+                </div>
+            </div>
+            
+
+            <footer class="bg-dark text-white py-4 mt-5">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-md-6">
+                            <p class="mb-0">&copy; 2025 Портфолио студента. Все права защищены.</p>
+                        </div>
+                        <div class="col-md-6 text-md-end">
+                            <a href="pages/contacts.html" class="text-white textdecoration-none me-3">Контакты</a>
+                            <a href="#" class="text-white text-decorationnone">Политика конфиденциальности</a>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+
         </main>
-        <footer class="footer">
-            <p class="footer__text">&copy; 2025 Крутая работа</p>
-        </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
